[package]
name = "live-reload"
version = "0.1.0"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.0.0-pre.3"
argh = "0.1.4"
compromise = { path = "./../compromise/" }
libloading = "0.6.5"
cstr = "0.2.5"
