[package]
name = "rdyn-3p"
version = "0.1.0"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.6.5"
cstr = "0.2.5"
compromise = { path = "../compromise" }
argh = "0.1.4"
